<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSeniorCenterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/str_bldg_SeniorCenter_Name"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/tvSeniorCenterAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvSeniorCenterName"
        android:layout_marginTop="10dp"
        android:text="@string/str_bldg_SeniorCenter_Address"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvSeniorCenterPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvSeniorCenterAddress"
        android:layout_marginTop="15dp"
        android:text="@string/str_bldg_SeniorCenter_Phone"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="307dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvSeniorCenterPhone"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/str_bldg_SeniorCenter_Name"
        app:srcCompat="@drawable/bldg_seniorcenter" />
</RelativeLayout>